<resources>
    <string name="app_name">Halalkan</string>
    <string name="map_key">AIzaSyC0-LbUHmkGHWdTwOfek7q2erdCzfR4UGA</string>
    <string name="mapbox_access_token" translatable="false">sk.eyJ1IjoiaGVucnlhdWd1c3RhIiwiYSI6ImNsM3I0cjg1NzA1M2Izam8wcjZlZ3hlZ2EifQ.j8vLApt4WD_sqhKnEQ3wfQ</string>
    <string name="title_activity_container">ContainerActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="prixa">Artificial Intelligent dari Prixa.ai akan membantu kamu menganalisa gejala Covid</string>
    <string name="gugus_tugas">2. https://data.covid19.go.id/ : Dukungan API untuk data Covid 19 Indonesia secara Realtime</string>
    <string name="written_by">"Ditulis Oleh : "</string>
    <string name="company_by">"Perusahaan : "</string>
    <string name="comment">Komentar Pengguna</string>
    <string name="list_photo_on_album">List Photo di Album</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="clickp">Klik Foto Untuk Melihat Preview</string>
    <string name="photo_title">Judul Photo</string>
    <string name="gps_settings_title">GPS settings</string>
    <string name="gps_settings_text">GPS is not enabled, you must activate it first from the settings to get the Qibla direction.</string>
    <string name="pilih_bahasa">Pilih Bahasa</string>
    <string name="MuatLebihBanyak">Tampilkan Data</string>
    <string name="home_restaurant_around_you">Restoran di Sekitar Anda</string>
    <string name="home_masjid_near_you">Masjid di Sekitar Anda</string>
    <string name="general_memuat_data">Memuat Data</string>
    <string name="detail_masjid_tentang_tempat_ibadah">Tentang Tempat Ibadah</string>
    <string name="photos">Photos</string>
    <string name="detail_masjid_detail">Detail</string>
    <string name="detail_masjid_fasilitas">Fasilitas</string>
    <string name="detail_masjid_narahubung">Narahubung</string>
    <string name="detail_masjid_jam_operasional">Jam Operasional</string>
    <string name="detail_masjid_alamat">Alamat</string>
    <string name="detail_masjid_kategori">Kategori</string>
    <string name="label_hubungi">Hubungi</string>
    <string-array name="array_type_registrant">
        <item value="2">Wisatawan</item>
        <item value="3">Restaurant</item>
    </string-array>
    <string-array name="array_days">
        <item value="0">Choose Day</item>
        <item value="1">Monday</item>
        <item value="2">Tuesday</item>
        <item value="3">Wednesday</item>
        <item value="4">Thursday</item>
        <item value="5">Friday</item>
        <item value="6">Saturday</item>
        <item value="7">Sunday</item>
    </string-array>
    <string-array name="array_avails">
        <item value="0">Choose Availability</item>
        <item value="1">Available</item>
        <item value="2">Empty</item>
    </string-array>
    <string-array name="array_aspal">
        <item value="0">Aspal 1 Jalur</item>
        <item value="1">Aspal Lebih dari 1 Jalur</item>
        <item value="2">Non-Aspal</item>
    </string-array>
    <string-array name="array_sumber_air">
        <item value="0">PDAM/PAM</item>
        <item value="1">Air Tanah/Pompa</item>
        <item value="2">Mata Air</item>
    </string-array>
    <string-array name="array_jenis_sertifikat_kepemilikan">
        <item value="0">SHM</item>
        <item value="1">HGB</item>
        <item value="2">HGU</item>
    </string-array>
    <string-array name="array_kategori_pemilik_sertifikat">
        <item value="0">Milik Sendiri</item>
        <item value="1">Kerabat</item>
        <item value="2">Orang Lain</item>
    </string-array>
    <string-array name="array_ijin_domisili">
        <item value="0">Ada</item>
        <item value="1">Pernah Ada</item>
        <item value="2">Belum Ada</item>
        <item value="3">Diurus Tidak Keluar</item>
    </string-array>
    <string-array name="array_peruntukan_bangunan">
        <item value="0">Pemukiman</item>
        <item value="1">Industri</item>
        <item value="2">Jasa</item>
        <item value="3">Perdagangan</item>
    </string-array>
    <string-array name="array_ada_tidak">
        <item value="0">Ada</item>
        <item value="1">Tidak Ada</item>
    </string-array>
    <string-array name="array_ada_tidak_lingkungan">
        <item value="0">Pilih Jawaban</item>
        <item value="1">Ada</item>
        <item value="2">Tidak Ada</item>
    </string-array>
    <string-array name="array_sewaan">
        <item value="0">Tidak</item>
        <item value="1">Bulanan</item>
        <item value="2">Tahunan</item>
    </string-array>
    <string-array name="array_bisa_tidak">
        <item value="0">Bisa</item>
        <item value="1">Tidak Bisa</item>
    </string-array>
    <string-array name="spinner_default">
        <item value="-99">Choose Item</item>
    </string-array>
    <string name="lorem_ipsum_short">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam blandit risus vel ante ornare</string>
    <string name="required_column">This column is required</string>
    <string name="example_notes_order_hint">Example : Without Sambal</string>
    <string name="save_change">Save Change</string>
    <string name="save_changes">Save Changes</string>
    <string name="notes_for_your_dish">Notes for your dish</string>
    <string name="add_note_to_dish">Add note to your dish</string>
    <string name="clear">Clear</string>
    <string name="label_order_review_customer_detail">Customer Detail :</string>
    <string name="order_review_hint_customer_name">Name</string>
    <string name="title_customer_details">Customer Details</string>
    <string name="order_review_hint_phone_number">Phone Number</string>
    <string name="order_review_hint_address">Address</string>
    <string name="title_order_food">Order Food</string>
    <string name="label_no_order_yet">Your food cart is empty</string>
    <string name="title_additional_information">Additional Information</string>
    <string name="title_choose_location">Choose Location</string>
    <string name="order_review_hint_additional_address">Room Number, Street, Additional Address. etc</string>
    <string name="orders_cant_be_canceled">Orders that have been accepted by the restaurant cannot be canceled</string>
    <string name="please_double_check_your_order">Please double check your order</string>
    <string name="order_submitted_to_restaurant">Your Order has been submitted to the restaurant</string>
    <string name="menu_home">Home</string>
    <string name="menu_order_history">Order History</string>
    <string name="title_order_history">Order History</string>
    <string name="title_load_more">Load More</string>
    <string name="btn_title_ok">OK</string>
    <string name="title_accept_order">Accept</string>
    <string name="title_reject">Reject</string>
    <string name="label_reason_of_order_rejection">Reason Of Order Rejection</string>
    <string name="label_reason_of_rejection">Reason of Rejection</string>
    <string name="example_reason_reject">Example : Out of Stock, Driver Unavailable, or others.</string>
    <string name="label_are_you_sure">Are You Sure</string>
    <string name="label_this_action_will_delete_post">This action will delete this post</string>
    <string name="label_canceled">Canceled</string>
    <string name="title_no">No</string>
    <string name="title_success">Success</string>
    <string name="message_data_updated_succesfully">Data Updated Successfully</string>
    <string name="message_data_created_succesfully">Data Created Successfully</string>
    <string name="message_data_deleted_succesfully">Data Deleted Successfully</string>
    <string name="message_order_changed_to_cooked">Order status will be changed to cooked</string>
    <string name="title_all">All</string>
    <string name="label_see_location_on_map">Direction</string>
    <string name="title_item">Items</string>
    <string name="label_item">items</string>
    <string name="title_driver">Driver</string>
    <string name="title_add_driver">Add New Driver</string>
    <string name="please_input_your_driver_data">Please input your driver data</string>
    <string name="title_fullname">Fullname</string>
    <string name="hint_input_your_email">Masukkan Email</string>
    <string name="please_input_your_driver_fullname">Please Input Your Driver Fullname</string>
    <string name="choose_driver_to_deliver_order">Click Driver to deliver this Order</string>
    <string name="you_are_on_the_last_page">You are on the last page</string>
    <string name="title_change_driver">Change Driver</string>
    <string name="message_update_restaurant_type">This action will updating your restaurant type</string>
    <string name="title_available">Available</string>
    <string name="title_unavailable">Unavailable</string>
    <string name="color_halalkan_primary">#156DBE</string>
    <string name="color_red_light">#B01134</string>
    <string name="message_change_driver">are you sure you want to change the driver of this order to</string>
    <string name="status_on_delivery">On Delivery</string>
    <string name="message_order_status_will_change_to">the order status will change to</string>
    <string name="message_change_driver_success">Driver and order status changed</string>
    <string name="title_driver_details">Driver Details</string>
    <string name="track_driver_position">Track Driver Position</string>
    <string name="see_invoice">See Invoice</string>
    <string name="title_driver_unavailable">Driver Unavailable</string>
    <string name="title_order_details">Order Details</string>
    <string name="title_food_delivery">Food Delivery</string>
    <string name="location_detail">Location Detail</string>
    <string name="title_your_location">Your Location</string>
    <string name="logged_in_message_surveyor">You are logged in as a surveyor</string>
    <string name="logged_in_message_resto">You are logged in as a restaurant</string>
    <string name="logged_in_message_driver">You are logged in as a driver</string>
    <string name="message_logged_out">Your Account will be logged out and Your data will be cleared</string>
    <string name="title_delivery_confirmation">Delivery Confirmation</string>
    <string name="form_title_recipient_name">Recipient Name :</string>
    <string name="hint_recipient_name">Recipient Name</string>
    <string name="title_form_recipient_signature">Recipient Hand Signature :</string>
    <string name="title_draw_signature_here">Draw Signature Here</string>
    <string name="title_reset_drawing">Reset Drawing</string>
    <string name="title_food_photo">Food Photo</string>
    <string name="form_title_food_name">Food Name</string>
    <string name="form_hint_food_name">Food Name</string>
    <string name="form_title_food_description">Food Description</string>
    <string name="form_hint_food_desc">Food Description</string>
    <string name="form_title_food_price">Food Price</string>
    <string name="form_hint_food_price">Price in Korean WON</string>
    <string name="title_restaurant_food_category">Restaurant Food Category</string>
    <string name="title_food_type">Food Type</string>
    <string name="title_delete_food">Delete Food</string>
    <string name="title_manage_food">Manage Food</string>
    <string name="title_form_email">Email</string>
    <string name="title_form_phone">Phone</string>
    <string name="title_form_password">Password</string>
    <string name="form_title_password">Password</string>
    <string name="form_hint_phone">Example 628966xxxx</string>
    <string name="register_message_tos">By registering, you agree to the terms of use of the Musko app</string>
    <string name="title_reset_password">Reset Password</string>
    <string name="title_delete">Delete</string>
</resources>