<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <com.google.android.material.appbar.AppBarLayout
                android:id="@id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:minHeight="?attr/actionBarSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.Toolbar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp">

                        <ImageButton
                            android:id="@+id/btn_back"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_centerInParent="true"
                            android:layout_marginEnd="20dp"
                            android:background="@android:color/transparent"
                            android:src="@drawable/ic_baseline_arrow_back_24"
                            app:tint="@color/blue_auth" />

                        <TextView
                            android:id="@+id/page_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@id/btn_back"
                            android:fontFamily="@font/poppins_medium"
                            android:text="@string/title_driver"
                            android:textAlignment="textEnd"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                    </RelativeLayout>

                </androidx.appcompat.widget.Toolbar>

            </com.google.android.material.appbar.AppBarLayout>


            <include
                android:id="@+id/include_photo_preview"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                layout="@layout/layout_photo_container_preview_small"/>

            <TextView
                android:layout_marginTop="@dimen/dimen_20dp"
                android:layout_marginHorizontal="@dimen/dimen_10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_regular"
                android:text="@string/title_fullname"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_name"
                android:layout_marginHorizontal="@dimen/dimen_10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/please_input_your_driver_fullname"
                android:textColor="@color/black"
                />

            <TextView
                android:layout_marginHorizontal="@dimen/dimen_10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_regular"
                android:text="@string/title_form_email"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_username"
                android:layout_marginHorizontal="@dimen/dimen_10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:fontFamily="@font/open_sans_regular"
                android:hint="@string/hint_input_your_email"
                android:text="firriezky@gmail.com"
                android:textColor="@color/black"
                />

            <TextView
                android:layout_marginHorizontal="@dimen/dimen_10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_regular"
                android:text="@string/title_form_phone"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_phone"
                android:layout_marginHorizontal="@dimen/dimen_10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/form_hint_phone"
                android:textColor="@color/black"
                />

            <TextView
                android:id="@+id/label_password"
                android:layout_marginHorizontal="@dimen/dimen_10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_regular"
                android:text="@string/title_form_password"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_password"
                android:layout_marginHorizontal="@dimen/dimen_10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:boxBackgroundColor="@android:color/transparent"
                app:passwordToggleEnabled="true"
                android:hint="@string/form_title_password">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:fontFamily="@font/open_sans_regular"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/container_edit_driver"
                android:layout_marginHorizontal="@dimen/dimen_10dp"
                android:visibility="gone"
                tools:visibility="visible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_delete_driver"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:strokeColor="@color/gray7575"
                    android:layout_marginTop="@dimen/dimen_10dp"
                    app:iconTint="@color/uikit_red"
                    android:textColor="@color/uikit_red"
                    android:text="@string/title_delete"
                    app:icon="@drawable/ic_cross_exit"
                    app:iconPadding="@dimen/dimen_10dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:cornerRadius="@dimen/dimen_20dp"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_reset_password"
                    android:layout_marginStart="@dimen/dimen_10dp"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:strokeColor="@color/gray7575"
                    android:layout_marginTop="@dimen/dimen_10dp"
                    android:text="@string/title_reset_password"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:cornerRadius="@dimen/dimen_20dp"/>

            </LinearLayout>

            <TextView
                android:id="@+id/info_register"
                android:layout_marginHorizontal="@dimen/dimen_10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_regular"
                android:text="@string/register_message_tos"
                android:textColor="@color/black"
                android:textSize="11sp" />



        </LinearLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_margin="20dp"
        android:backgroundTint="@color/gray70"
        android:contentDescription="Button Add Report"
        android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/white" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loading_anim"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="50dp"
        android:visibility="gone"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_fileName="loading_circle_rgb.json"
        app:lottie_loop="true" />


</androidx.constraintlayout.widget.ConstraintLayout>